# libb64

./: CMakeLists.txt
cmake/: Findlibb64.cmake
src/: cdecode.c  cencode.c
